# DigitalFUTURES_Workshop_2025

./: .gitignore  README.md  pyproject.toml
Examples/Rhino-GH/: 250625_demo.gh  250625_workflow.gh  250625_workshop_rh8.3dm  250625_workshop_rh8.3dm.rhl
Vizor/Docker/: README.md  start_vizor.ps1  vizor_config.yml
Vizor/Grasshopper/: Vizor.gha
VizorBridge/: README.md  RobotInterface.py  main.py
VizorBridge/samples/: __init__.py
VizorBridge/samples/tests/: test_ollama_connection.py  test_simplechat.py
VizorBridge/samples/voice_agents/: README.md  demo_openai_agents_voice.py  demo_smol_agents_voice.py  env.example
VizorBridge/ur/: README.md  __init__.py  bridge.py  launcher.py  process_main.puml  ur.puml  utils.py  voice_agent_io.puml
VizorBridge/ur/agents/: base_agent.py  openai_agent.py  session_manager.py  shared_prompts.py  smol_agent.py
VizorBridge/ur/config/: __init__.py  robot_config.py  supply_stations.py  system_config.py  system_prompts.py  topics.py  voice_config.py
VizorBridge/ur/core/: __init__.py  cleanup_manager.py  connection.py
VizorBridge/ur/demo/: demo_ros_free_voice.py
VizorBridge/ur/diagrams/: script_FabUnitA.plantuml  voice_agent_io.puml
VizorBridge/ur/scripts/: __init__.py
VizorBridge/ur/tests/: __init__.py  demo_openai_realtime_unit.py  test_audio.py  test_bridge_simple.py  test_bridge_standalone.py  test_openai_realtime_hybrid.py  test_openai_realtime_interactive.py  test_robot_tools.py  test_ros_task_publisher.py  test_ros_task_subscriber.py  test_rtde_cleanup.py  test_rtde_connection.py  test_rtde_connection_real.py  test_rtde_data_handling.py  test_system_prompts.py  test_tool_registry.py
VizorBridge/ur/tools/: __init__.py  gripper_tools.py  movement_tools.py  registry.py
VizorBridge/ur/ui/: console.py
(+7 files in other folders)
